# tascam

./: .gitignore  BUGS.md  Makefile  normalize.py  process.py  pyproject.toml  split_concert.py
conductor/: index.md  product.md  tracks.md
conductor/track-01-models/: plan.md  spec.md
conductor/track-02-api/: plan.md  spec.md
conductor/track-03-player/: plan.md  spec.md
conductor/track-04-views/: plan.md  spec.md
conductor/track-05-backup/: plan.md  spec.md
tascam_app/: audio_processor.py  database.py  models.py  web.py
tascam_app/static/: app.js  style.css
tascam_app/templates/: index.html
